implement process logic